--- a/_posts/2025-11-11-RustyKey.md
+++ b/_posts/2025-11-11-RustyKey.md
@@ -152,10 +152,10 @@ Looking at bloodhound with the data collected earlier, we see that `IT-Computer3
 ```
 
 
-![helpdesk.png](assets/img/rustykey/bloodhoundHelpdesk.png)
+![bloodhoundHelpdesk.png](assets/img/rustykey/bloodhoundHelpdesk.png)
 HELPDESK is really interesting as it's a non default one and has `ForceChangePassword` over several users. Furthermore, all of these users are part of the `REMOTE MANAGEMENT USERS` ( except dd.ali ). 
 
-![winrm.png](assets/img/rustykey/bloodhoundWinrmUsers.png)
+![bloodhoundWinrmUsers.png](assets/img/rustykey/bloodhoundWinrmUsers.png)
 We can of course try to change the password of one of those users and try to winrm :
 ```terminal
 ┌──(samsam㉿pika-pika)-[~/htb/rustykey]
@@ -205,7 +205,7 @@ Protected User accounts that authenticate to a domain running Windows Server are
 It does say that the protected account won't be able to authenticate using RC4. This is where it gets interesting, because as a member of the `HELPDESK` group, we can manage who is and who isn't in the `PROTECTED OBJECTS` group ! 
 bb.morgan is in this group because they are in the `IT` group which is in `PROTECTED OBJECTS`. 
 
-![protected.png](assets/img/rustykey/bloodhoundItProtected.png)
+![bloodhoundItProtected.png](assets/img/rustykey/bloodhoundItProtected.png)
 We can remove the `IT` group from the `PROTECTED OBJECTS` group and we'll be able to authenticate !
 ```terminal
 ┌──(samsam㉿pika-pika)-[~/htb/rustykey]
@@ -427,7 +427,7 @@ Yeaaaaah, progress !
 ## Domain admin
 From there, we'll go back to the bloodhound results to understand what mm.turner can do.
 
-![mmturner](assets/img/rustykey/bloodhoundmmturner.png)
+![bloodhoundmmturner.png](assets/img/rustykey/bloodhoundmmturner.png)
 This definitely sounds juicy !
 It allows us to do a Resource Based Constrained Delegation, which will allow us to impersonate users of the domain. If you are unfamiliar with this kind of attack, this is greatly explained [here](https://www.thehacker.recipes/ad/movement/kerberos/delegations/rbcd), and in french (really good explanation) [here](https://beta.hackndo.com/resource-based-constrained-delegation-attack/).
 
